<resources>
    <string name="app_name">Fukasaku</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Mau belajar Android, iOS, Machine Learning, Cloud, Front-End, Back-End, dan bidang IT lainnya? Di Dicoding aja!</string>
    <string name="title_welcome_page">Selamat datang di Dicoding!</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Sudah siap untuk upgrade skill?</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="password_error">Password must 8 characters</string>
    <string name="email_error">Wrong format email!</string>
    <string name="image">image</string>
    <string name="btnUpload">Upload</string>
    <string name="btnGallery">Gallery</string>
    <string name="btnCamera">Camera</string>
    <string name="addDescription">Add Description story</string>
    <string name="fab">Add Story</string>
    <string name="all_stories">All Stories</string>
    <string name="logout_menu">Logout</string>
    <string name="msg_title">Yeay!</string>
    <string name="msg_desc">You Have Successfully Login!</string>
    <string name="msg_button">Continue</string>
    <string name="title_detail">Title</string>
    <string name="title_desc">Description</string>
</resources>