<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:orientation="vertical"
    android:padding="16dp">


    <ImageView
        android:id="@+id/ivStoryLogo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/image"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/storyTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/title_detail"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/storyDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_desc"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="16sp" />

</LinearLayout>