<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/story_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/image"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/story_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:text="@string/title_detail"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/story_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:text="@string/title_desc"
            android:textSize="18sp" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />
    </LinearLayout>
</ScrollView>